--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Min App</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      padding: 2rem;
-    }
-  </style>
+
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+  <script src="sketch.js" defer></script>
 </head>
 <body>
-
-  <h1>Min GitHub Pages App</h1>
-  <button onclick="alert('Det virker!')">Test</button>
-
 </body>
 </html>
