feat: Implement Firebase authentication, an admin panel for user creation, and migrate player data to Firestore with real-time updates.

--- a/Spillere.html
+++ b/Spillere.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-  <script src="sketch.js" defer></script>
+  <script type="module" src="sketch.js"></script>
 </head>
 
 <body>
@@ -22,6 +22,10 @@
     <div class="search-section">
       <input type="text" id="player-search" placeholder="Søg efter spillere, stil eller tags..."
         onkeyup="filterPlayers()">
+      <button onclick="exportPlayersJson()" class="export-btn"
+        title="Kopier alle spillere til udklipsholder (til GitHub opdatering)">
+        📋 Export JSON
+      </button>
     </div>
 
     <!-- Add Player Form -->
@@ -139,7 +143,7 @@
 
     <ul class="nav-links">
       <li>
-        <a href="index.html">
+        <a href="home.html">
           <div class="icon-box">T1</div>
           <span class="link-text">Start</span>
         </a>
@@ -164,6 +168,14 @@
         </a>
       </li>
     </ul>
+
+    <div style="position: absolute; bottom: 20px; width: 100%; text-align: center;">
+      <a href="#" onclick="logout(); return false;"
+        style="color: #666; text-decoration: none; font-size: 0.9rem; display: flex; flex-direction: column; align-items: center;">
+        <span style="font-size: 1.5rem;">🚪</span>
+        <span class="link-text" style="font-size: 0.8rem;">Log ud</span>
+      </a>
+    </div>
   </nav>
 
 
