--- a/TræningsPas.html
+++ b/TræningsPas.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-  <script src="sketch.js" defer></script>
+  <script type="module" src="sketch.js"></script>
 </head>
 
 <body>
@@ -27,14 +27,15 @@
 
     <ul class="nav-links">
       <li>
-        <a href="index.html">
+        <a href="home.html">
           <div class="icon-box">T1</div>
           <span class="link-text">Start</span>
         </a>
       </li>
       <li>
         <a href="Spillere.html">
-          <div class="icon-box"><img src="Images/SpillereIcon.png" alt="SP" style="max-width: 30px; max-height: 30px;"></div>
+          <div class="icon-box"><img src="Images/SpillereIcon.png" alt="SP" style="max-width: 30px; max-height: 30px;">
+          </div>
           <span class="link-text">Spillere</span>
         </a>
       </li>
