--- a/home.html
+++ b/home.html
@@ -52,6 +52,18 @@
         </a>
       </li>
     </ul>
+
+    <div style="position: absolute; bottom: 20px; width: 100%; text-align: center;">
+      <a href="admin.html"
+        style="color: #888; text-decoration: none; font-size: 0.8rem; margin-bottom: 15px; display:block;">
+        👑 Admin
+      </a>
+      <a href="#" onclick="logout(); return false;"
+        style="color: #666; text-decoration: none; font-size: 0.9rem; display: flex; flex-direction: column; align-items: center;">
+        <span style="font-size: 1.5rem;">🚪</span>
+        <span class="link-text" style="font-size: 0.8rem;">Log ud</span>
+      </a>
+    </div>
   </nav>
 
 
