--- a/home.html
+++ b/home.html
@@ -54,8 +54,8 @@
     </ul>
 
     <div style="position: absolute; bottom: 20px; width: 100%; text-align: center;">
-      <a href="admin.html"
-        style="color: #888; text-decoration: none; font-size: 0.8rem; margin-bottom: 15px; display:block;">
+      <a id="admin-link" href="admin.html"
+        style="display: none; color: #888; text-decoration: none; font-size: 0.8rem; margin-bottom: 15px;">
         👑 Admin
       </a>
       <a href="#" onclick="logout(); return false;"
