--- a/index.html
+++ b/index.html
@@ -2,154 +2,158 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LaTateni - Login</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="login.js"></script>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #f5f5f5;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LaTateni - Login</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="Images/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="login.js"></script>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: #f5f5f5;
+    }
 
-        .login-card {
-            background: white;
-            padding: 2.5rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
+    .login-card {
+      background: white;
+      padding: 2.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
 
-        .login-header h1 {
-            color: #333;
-            margin-bottom: 0.5rem;
-            font-size: 2rem;
-        }
+    .login-header h1 {
+      color: #333;
+      margin-bottom: 0.5rem;
+      font-size: 2rem;
+    }
 
-        .login-header p {
-            color: #666;
-            margin-bottom: 2rem;
-        }
+    .login-header p {
+      color: #666;
+      margin-bottom: 2rem;
+    }
 
-        .auth-btn {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 1rem;
-            border: none;
-            border-radius: 6px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: all 0.2s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
+    .auth-btn {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
 
-        .google-btn {
-            background: white;
-            color: #444;
-            border: 1px solid #ddd;
-        }
+    .google-btn {
+      background: white;
+      color: #444;
+      border: 1px solid #ddd;
+    }
 
-        .google-btn:hover {
-            background: #f8f9fa;
-            border-color: #ccc;
-        }
+    .google-btn:hover {
+      background: #f8f9fa;
+      border-color: #ccc;
+    }
 
-        .divider {
-            margin: 1.5rem 0;
-            display: flex;
-            align-items: center;
-            color: #888;
-            font-size: 0.9rem;
-        }
+    .divider {
+      margin: 1.5rem 0;
+      display: flex;
+      align-items: center;
+      color: #888;
+      font-size: 0.9rem;
+    }
 
-        .divider::before,
-        .divider::after {
-            content: "";
-            flex: 1;
-            border-bottom: 1px solid #ddd;
-        }
+    .divider::before,
+    .divider::after {
+      content: "";
+      flex: 1;
+      border-bottom: 1px solid #ddd;
+    }
 
-        .divider span {
-            padding: 0 10px;
-        }
+    .divider span {
+      padding: 0 10px;
+    }
 
-        input {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 1rem;
-        }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
 
-        .submit-btn {
-            background: #333;
-            color: white;
-            font-weight: 500;
-        }
+    .submit-btn {
+      background: #333;
+      color: white;
+      font-weight: 500;
+    }
 
-        .submit-btn:hover {
-            background: #000;
-        }
+    .submit-btn:hover {
+      background: #000;
+    }
 
-        .error-msg {
-            color: #d32f2f;
-            background: #ffebee;
-            padding: 10px;
-            border-radius: 4px;
-            margin-bottom: 1rem;
-            font-size: 0.9rem;
-            display: none;
-        }
-    </style>
+    .error-msg {
+      color: #d32f2f;
+      background: #ffebee;
+      padding: 10px;
+      border-radius: 4px;
+      margin-bottom: 1rem;
+      font-size: 0.9rem;
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="login-card">
-        <div class="login-header">
-            <h1>LaTateni</h1>
-            <p>Træner Portal</p>
-        </div>
-
-        <div id="error-box" class="error-msg"></div>
-
-        <button id="google-login" class="auth-btn google-btn">
-            <svg width="20" height="20" viewBox="0 0 24 24">
-                <path fill="#4285F4"
-                    d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
-                <path fill="#34A853"
-                    d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
-                <path fill="#FBBC05"
-                    d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.26.81-.58z" />
-                <path fill="#EA4335"
-                    d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
-            </svg>
-            Log ind med Google
-        </button>
-
-        <div class="divider">
-            <span>ELLER</span>
-        </div>
-
-        <form id="email-form">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Adgangskode" required>
-            <button type="submit" class="auth-btn submit-btn">Log Ind</button>
-        </form>
-
-        <p style="margin-top: 1rem; font-size: 0.8rem; color: #888;">
-            Kontakt administrator for at få en konto, hvis du ikke har en.
-        </p>
+  <div class="login-card">
+    <div class="login-header">
+      <h1>LaTateni</h1>
+      <p>Træner Portal</p>
     </div>
+
+    <div id="error-box" class="error-msg"></div>
+
+    <button id="google-login" class="auth-btn google-btn">
+      <svg width="20" height="20" viewBox="0 0 24 24">
+        <path fill="#4285F4"
+          d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+        <path fill="#34A853"
+          d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+        <path fill="#FBBC05"
+          d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.26.81-.58z" />
+        <path fill="#EA4335"
+          d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+      </svg>
+      Log ind med Google
+    </button>
+
+    <div class="divider">
+      <span>ELLER</span>
+    </div>
+
+    <form id="email-form">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Adgangskode" required>
+      <button type="submit" class="auth-btn submit-btn">Log Ind</button>
+    </form>
+
+    <p style="margin-top: 1rem; font-size: 0.8rem; color: #888;">
+      Kontakt administrator for at få en konto, hvis du ikke har en.
+    </p>
+  </div>
 </body>
 
 </html>
